--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,7 +1,41 @@
-<app-add-todo (addTodo)="addTodo($event)"></app-add-todo>
-<app-todo-item 
-  *ngFor="let todo of todos" 
-  [todo]="todo"
-  (deleteTodo)="deleteTodo($event)"
-  >
-</app-todo-item>
+<div>
+  <app-add-todo (addTodo)="addTodo($event)"></app-add-todo>
+  <mat-tab-group>
+    <mat-tab label="Do zrobienia"> 
+      <app-todo-item 
+      *ngFor="let todo of todosUndone" 
+      [todo]="todo"
+      (deleteTodo)="deleteTodo($event)"
+      (changeTodo)="changeTodo()"
+      >
+      </app-todo-item>
+    </mat-tab>
+    <mat-tab label="Zrobione"> 
+      <app-todo-item 
+      *ngFor="let todo of todosDone" 
+      [todo]="todo"
+      (deleteTodo)="deleteTodo($event)"
+      (changeTodo)="changeTodo()"
+      >
+      </app-todo-item>
+    </mat-tab>
+    <mat-tab label="Wszystkie"> 
+      <app-todo-item 
+      *ngFor="let todo of todosDoneAndUndone" 
+      [todo]="todo"
+      (deleteTodo)="deleteTodo($event)"
+      (changeTodo)="changeTodo()"
+      >
+      </app-todo-item>
+    </mat-tab>
+    <mat-tab label="Usunięte"> 
+      <app-todo-item 
+      *ngFor="let todo of todosDeleted" 
+      [todo]="todo"
+      (deleteTodo)="deleteTodo($event)"
+      (changeTodo)="changeTodo()"
+      >
+      </app-todo-item>
+    </mat-tab>
+  </mat-tab-group>
+</div>
