--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.tooltip {
+    position: relative;
+    text-align: center;
+   // display: inline-block;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: max-content;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+      
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+  }
+
+  .tooltipLeft{ //https://www.w3schools.com/css/css_tooltip.asp
+    top: -5px;
+    bottom: auto; //left
+    right: 128%;  
+  }
+
+  .tooltipRight {
+    top: -5px;
+    left: 125%;
+}
+ 
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
