--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,6 +1,3 @@
 <header class="header">
-  <h1>TodoList</h1>
-  <nav>
-    <a routerLink="/">Home</a> | <a routerLink="/about">About</a> | <a routerLink="/login">Login</a>
-  </nav>
+  <app-menu></app-menu>
 </header>
